- nonbookable timeslots on calendar are now unclickable and show up as grey colour. - However, still can book into greyed area if drag from nongrey area to grey area - Also, front-end still unable to prevent overlapping events

--- a/web/residents/css/residentscustom.css
+++ b/web/residents/css/residentscustom.css
@@ -116,3 +116,11 @@
 .fc-view-month .fc-event-time, .fc-event-title{
     float:none !important;
 }
+
+.closedSlot{
+    background:#EEE;
+    pointer-events:none;
+}
+.closedSlot:hover{
+    cursor: not-allowed;
+}
